language/move-lang/tests/move_check/parser/spec_parsing_lambda_fail.move
module M {
    fun lambda_in_prog(x: u64) {
      let _ = |y| x + y;
    }
}
